fix html, dice styling

--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
 <aside id="player1">
 	<h3 id="player1--name">Player1</h3>
 	<section id="player1--dices">
-		<div class="dice"> </div>
-		<div class="dice"> </div>
-		<div class="dice"> </div>
+		<div class="dice"></div>
+		<div class="dice"></div>
+		<div class="dice"></div>
 	</section>
 	<div class="dicedeco"></div>
 	<button class="rollbutton" id="player1--rollbutton">Roll</button>
+</aside>
+<aside id="player2">
 	<h3 id="player2--name">Player2</h3>
 	<section id="player2--dices">
-		<div class="dice"> </div>
-		<div class="dice"> </div>
-		<div class="dice"> </div>
+		<div class="dice"></div>
+		<div class="dice"></div>
+		<div class="dice"></div>
 	</section>
 	<div class="dicedeco"></div>
 	<button class="rollbutton" id="player2--rollbutton">Roll</button>
